@@ -5823,7 +5823,7 @@ names(f) <- nf ; f
 str(lf <- as.list(f))
 stopifnot(identical(nf, names(f)),
           identical(nf, names(lf)))
-## In R <= 4.1.x, the length-1 factor components where named instead
+## In R <= 4.1.x, the length-1 factor components were named instead
 
 
 ## More accurate tanpi() {calling R's API Rtanpi()}:
@@ -5836,6 +5836,18 @@ stopifnot(tanpi(outer(pm1/4, k, `+`)) == pm1,
           m[k %% 4 == 0, "tanpi(k/4)"] == 0)
 ## in R <= 4.1.x, tanpi(<int> +- 1/4 ) values typically were off (by +/- 2^-53)
 
+
+## plot.lm(which = 5), when leverages are constant,
+## failed for character predictors in R <= 4.1.x -- PR#17840
+dd <-  expand.grid(a = factor(1:3), b = factor(1:2), c = as.character(1:2),
+                   stringsAsFactors = FALSE)
+dd$y <- rnorm(nrow(dd))
+plot(lm(y~a+b+c, dd), which = 5)  # gave Error: non-conformable arguments
+plot(lm(y~  b+c, dd), which = 5)  # gave Error: 'x' and 'y' lengths differ
+tryCatch(
+plot(lm(y~    c, dd), which = 5)  # gave empty plot, noting missing factors
+, message = function(m)
+    stopifnot(!grepl("no factor predictors", conditionMessage(m), fixed=TRUE)))
 
 
 ## keep at end
